--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,11 @@
             <artifactId>logback-gelf</artifactId>
             <version>2.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.immutables</groupId>
+            <artifactId>value</artifactId>
+            <version>2.7.5</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
